# framework

./: Dockerfile  README.md  dados.sql  docker-compose.yml  docker-compose.yml.old  machine-learning.py  model.pkl  orange.ows  pyproject.toml  student_depression.csv
ai/: forms.py  model.pkl  models.py  train_model.py  urls.py  utils.py  views.py
ai/migrations/: 0001_initial.py  0002_alter_trainingdata_academic_pressure_and_more.py
ai/models/: __init__.py  training_data.py
ai/services/: __init__.py  base_evaluation.py  evaluation_service.py  train_model.py  utils.py
ai/templates/ai/: import_csv.html  train_model.html
ai/views/: __init__.py  evaluation_metrics_view.py  import_csv_view.py  train_model_view.py
enrollment/: forms.py  models.py  urls.py  views.py
enrollment/migrations/: 0001_initial.py  0002_alter_student_default_risk.py  0002_auto_20250126_1240.py  0003_auto_20250126_1243.py  0004_auto_20250126_1246.py  0005_auto_20250126_2108.py  0006_rename_financial_strees_student_financial_stress_and_more.py  0007_alter_student_gender.py  0008_alter_student_work_pressure.py  0009_alter_student_academic_pressure_and_more.py
enrollment/templates/: course_confirm_delete.html  course_detail.html  course_form.html  course_list.html  home.html
enrollment/templates/city/: confirm_delete.html  details.html  form.html  list.html
enrollment/templates/degree/: confirm_delete.html  detail.html  form.html  list.html
enrollment/templates/student/: detail.html  (+3 more)
framework/: settings.py  urls.py
model/: model.pkl
templates/: base.html
trained_models/: model.pkl
(+14 files in other folders)
